# reason2return

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: README.md  base.yaml
configs/experiments/: exp_001_grpo_baseline.yaml  exp_002_pairwise_ranking.yaml  exp_003_schema_validation.yaml
docs/: CODE_QUALITY_SETUP.md  MODULE_STRUCTURE.md  PORTING_SUMMARY.md  PRD.md  QUICKREF.md  README.md  REPO_ORGANIZATION.md  SETUP_STATUS.md  environment.yml
notebooks/: README.md  Tiny_Trading_R1_RankingRL.ipynb  Tiny_Trading_R1_SchemaValidation.ipynb
r2r/: __init__.py
r2r/api/: __init__.py  app.py  schemas.py
r2r/backtest/: __init__.py  engine.py  metrics.py
r2r/features/: __init__.py  extractors.py  technical.py
r2r/training/: __init__.py  rewards.py  rft.py  sft.py
r2r/utils/: __init__.py  logging.py
schemas/: README.md  data_manifest.schema.json  thesis.schema.json
tests/: conftest.py  test_config.py  test_pipeline.py  test_schemas.py
